tests/netedit/demandElements/stop/basic/invalid_type/routes.netedit
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 02.09.2020 15:51:45 by Eclipse SUMO netedit Version v1_6_0+1920-95c9a76eac
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netconvertConfiguration.xsd">

    <input>
        <sumo-net-file value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\input_net.net.xml"/>
    </input>

    <output>
        <output-file value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\net.net.xml"/>
    </output>

    <processing>
        <geometry.min-radius.fix.railways value="false"/>
        <geometry.max-grade.fix value="false"/>
        <offset.disable-normalization value="true"/>
        <lefthand value="false"/>
    </processing>

    <junctions>
        <no-turnarounds value="true"/>
        <junctions.corner-detail value="5"/>
        <junctions.limit-turn-speed value="5.5"/>
        <rectangular-lane-cut value="false"/>
    </junctions>

    <pedestrian>
        <walkingareas value="false"/>
    </pedestrian>

    <netedit>
        <additional-files value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\additionals.xml"/>
        <additionals-output value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\additionals.xml"/>
        <route-files value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\routes.xml"/>
        <demandelements-output value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\routes.xml"/>
        <data-files value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\datas.xml"/>
        <dataelements-output value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\datas.xml"/>
    </netedit>

    <visualisation>
        <gui-settings-file value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\gui-settings.xml"/>
        <window-size value="700,500"/>
        <window-pos value="50,50"/>
        <gui-testing value="true"/>
        <gui-testing-debug value="true"/>
        <gui-testing-debug-gl value="true"/>
        <gui-testing.setting-output value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\guisettingsoutput.xml"/>
    </visualisation>

    <report>
        <no-warnings value="true"/>
        <aggregate-warnings value="5"/>
        <error-log value="C:\Users\alva_pa\.texttest\tmp\netedit.gui.02Sep155018.5136\netedit.gui\demandElements\stop\basic\invalid_type\log.txt"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <route edges="gneE0 gneE1" color="yellow" id="route_0">
        <stop lane="gneE0_0" startPos="7.00" endPos="17.00" duration="60.00"/>
    </route>
</routes>
